# amo-META.

./: Makefile  README.md  pyproject.toml  run_dev.py
app/: __init__.py
app/api/: __init__.py  webhook.py
app/models/: amo.py  database.py  facebook.py
app/services/: amo_oauth.py  facebook_oauth.py  oauth.py
