[project]
name = "amo-meta"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "sqlalchemy>=2.0.49",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
    "senzib-amo",
]

[tool.uv.sources]
senzib-amo = { git = "https://github.com/BoburTursunov/senzib_amocrm_lib.git", rev = "b3468259b252f308ef44c2d92a2a21341e71120f" }
